Revision history for Perl extension Finance-Robinhood

{{$NEXT}}

    - Expose historicals call in ::Instument

0.19 2017-03-29T16:26:33Z

    - Robinhood Instant/Gold features:
        - extended_hours value in ::Order
        - override_day_trade_checks value in ::Order
        - override_day_trade_checks value in ::Order
    - Gather orders after a certain time with ::Robinhood::list_orders({since => $timestamp})

0.18 2017-03-05T17:28:26Z

    - Add ::Robinhood::fundamentals(...) function/->fundamentals(...) method

0.17 2017-03-05T02:07:57Z

    - Lazy load ::Quote data
    - Expose source of quote (consolidated tape, nasdaq live, etc.)

0.16 2017-02-11T21:13:47Z

    - Add ::Instrument::Fundamentals class
    - Add support for bound historical data (...see docs)
    - Lazy load ::Market data
    - More lazy load stuff

0.15 2016-12-29T16:42:12Z

    - 'next' and 'previous' keys were getting messed up in paginated results
    - Various minor, nondescript fixes

0.14 2016-12-28T04:08:26Z

    - Lazy load ::Instrument data (save the API server on watchlist calls)
    - Expose day_trade_ratio, min_tick_size, country, and margin_initial_ratio in ::Instrument objects
    - ::Instrument->quote() returns a single quote object
    - Use Time::Piece if loaded (fallback to DateTime)
    - Rollback 0.12 now that the API is fixed

0.13 2016-12-25T19:41:16Z

	- Fix adding single instrument to watchlist

0.12 2016-12-02T21:42:01Z

    - Update eg/buy.pl for minor API change

0.11 2016-10-10T16:41:23Z

    - RH's API server stopped updating the /markets/ endpoint on July 30th.
    - ::Market::Hours now exposes extended trading hours

0.10 2016-08-27T16:37:13Z

    - New Finance::Robinhood::Portfolio class for current and historical info
    - New ::Robinhood->portfolios() method to get paginated list of portfolios
    - New ::Robinhood->markets() method to get a paginated list of supported
        markets as Finance::Robinhood::Market objects